# developer_joyofenergy_meter_c

./: CMakeLists.txt  README.md
meter/: CMakeLists.txt  configuration.h  meter.c  meter.h
meter/adapter/: CMakeLists.txt
meter/adapter/protocol/: CMakeLists.txt  protocol.c  protocol.h  reading.c  reading.h
meter/adapter/schedule/: schedule.h
meter/app/: CMakeLists.txt
meter/app/service/: CMakeLists.txt  electricity_reading_service.h
meter/domain/: electricity_energy.h
meter/hal/: CMakeLists.txt  bsp.h  clock.h  endpoint.h  metrology.h
test/: CMakeLists.txt  endpoint.cpp
test/mocks/: CMakeLists.txt  bsp.c  bsp.h  clock.c  clock.h  endpoint.c  endpoint.h  metrology.c  metrology.h
